--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,4 @@
-add_executable(${PROJECT_NAME} "main.cpp")
+add_executable(${PROJECT} "main.cpp")
+target_link_libraries(${PROJECT})
+
+install(TARGETS ${PROJECT} DESTINATION ${INSTALL_NAME_DIR})
